src/test/ui/const-eval/ub-enum-ptr.stderr
error: this constant cannot be used
  --> $DIR/ub-enum-ptr.rs:23:1
   |
LL | const BAD_ENUM: Enum = unsafe { Foo { a: &1 }.b};
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ a raw memory access tried to access part of a pointer value as raw bytes
   |
   = note: #[deny(const_err)] on by default

error: aborting due to previous error

